--- a/src/Nobetci.Web/appsettings.Production.json
+++ b/src/Nobetci.Web/appsettings.Production.json
@@ -11,8 +11,9 @@
     "DefaultConnection": "Host=142.93.32.204;Port=5432;Database=nobetci;Username=nobetci;Password=NobetciApp2026!Secure"
   },
   "AppSettings": {
-    "GuestEmployeeLimit": 7,
-    "FreemiumEmployeeLimit": 20,
+    "GuestEmployeeLimit": 5,
+    "RegisteredEmployeeLimit": 10,
+    "PremiumEmployeeLimit": 100,
     "DefaultLanguage": "tr",
     "SupportedLanguages": ["tr", "en"]
   },
