google login analitycs search console recaptha

--- a/src/Nobetci.Web/appsettings.json
+++ b/src/Nobetci.Web/appsettings.json
@@ -25,5 +25,13 @@
   "AdminSettings": {
     "Username": "Geldimmix",
     "Password": "Liberemall423445"
+  },
+  "Google": {
+    "ClientId": "YOUR_GOOGLE_CLIENT_ID",
+    "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
+  },
+  "ReCaptcha": {
+    "SiteKey": "YOUR_RECAPTCHA_SITE_KEY",
+    "SecretKey": "YOUR_RECAPTCHA_SECRET_KEY"
   }
 }
