Add Time Attendance (Mesai Takip) API with JWT authentication
Features:
- TimeAttendance entity for check-in/check-out records
- ApiKey entity for external integrations
- JWT-based authentication for API access
- AttendanceApiController with endpoints:
  - POST /api/v1/attendance/auth - Get JWT token
  - POST /api/v1/attendance/checkin - Record check-in
  - POST /api/v1/attendance/checkout - Record check-out
  - POST /api/v1/attendance/record - Full attendance record
  - GET /api/v1/attendance/employee/{id} - Employee records
  - GET /api/v1/attendance/today - Today's status
  - GET /api/v1/attendance/employees - Employee list
- Location tracking support (GPS)
- Source tracking (Manual, API, Device, Mobile)
- Migration for new tables

--- a/src/Nobetci.Web/appsettings.json
+++ b/src/Nobetci.Web/appsettings.json
@@ -10,6 +10,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=142.93.32.204;Port=5432;Database=nobetci;Username=nobetci;Password=NobetciApp2026!Secure"
   },
+  "Jwt": {
+    "Secret": "GeldimmiJwtSecretKey2026!SuperSecureApiKey",
+    "Issuer": "Geldimmi",
+    "Audience": "GeldimmiApi",
+    "ExpiryMinutes": 60
+  },
   "DeepInfra": {
     "ApiKey": "O4j1EWYs15ZiGAStc8HzPf0T91ZNkb16",
     "Model": "deepseek-ai/DeepSeek-V3",
