--- a/src/Nobetci.Web/appsettings.Development.json
+++ b/src/Nobetci.Web/appsettings.Development.json
@@ -7,11 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=142.93.32.204;Port=5432;Database=nobetci_db;Username=nobetci;Password=NobetciApp2026!Secure"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=nobetci;Username=postgres;Password=YOUR_LOCAL_PASSWORD"
   },
   "AdminSettings": {
-    "Username": "Geldimmix",
-    "Password": "Liberemall423445"
+    "Username": "admin",
+    "Password": "YOUR_ADMIN_PASSWORD"
   },
   "Google": {
     "ClientId": "YOUR_GOOGLE_CLIENT_ID",
@@ -20,5 +20,10 @@
   "ReCaptcha": {
     "SiteKey": "YOUR_RECAPTCHA_SITE_KEY",
     "SecretKey": "YOUR_RECAPTCHA_SECRET_KEY"
+  },
+  "Jwt": {
+    "Key": "YOUR_JWT_SECRET_KEY_FOR_LOCAL_DEVELOPMENT",
+    "Issuer": "Geldimmi",
+    "Audience": "GeldimmiUsers"
   }
 }
