email confirmation system added

--- a/src/Nobetci.Web/appsettings.json
+++ b/src/Nobetci.Web/appsettings.json
@@ -39,5 +39,12 @@
   "ReCaptcha": {
     "SiteKey": "YOUR_RECAPTCHA_SITE_KEY",
     "SecretKey": "YOUR_RECAPTCHA_SECRET_KEY"
+  },
+  "Resend": {
+    "ApiToken": "re_cpD6XpEF_13dSFJtnHTYtxPpFYW3qe6YR"
+  },
+  "Email": {
+    "FromEmail": "noreply@geldimmi.com",
+    "FromName": "Geldimmi"
   }
 }
