--- a/src/Nobetci.Web/Nobetci.Web.csproj
+++ b/src/Nobetci.Web/Nobetci.Web.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+    <PackageReference Include="Resend" Version="0.2.1" />
   </ItemGroup>
 
 </Project>
