feat: Move hardcoded values to database, add Admin Settings page
- Move all hardcoded limits to SystemSettings database table
- Add new SystemSettings keys for employee, cleaning, unit limits
- Create dynamic Admin Settings page for managing all settings
- Update CleaningController to use ISystemSettingsService
- Update AppController to use ISystemSettingsService
- Make admin password salt configurable via appsettings.json
- Add category and data type support for settings
- Remove old static Settings view, add new dynamic SystemSettings view

--- a/src/Nobetci.Web/appsettings.json
+++ b/src/Nobetci.Web/appsettings.json
@@ -28,10 +28,7 @@
     "DefaultLanguage": "tr",
     "SupportedLanguages": ["tr", "en"]
   },
-  "AdminSettings": {
-    "Username": "Geldimmix",
-    "Password": "Liberemall423445"
-  },
+  "_comment_admin": "Admin credentials should be set via environment variables: ADMIN_DEFAULT_USERNAME, ADMIN_DEFAULT_PASSWORD",
   "Google": {
     "ClientId": "YOUR_GOOGLE_CLIENT_ID",
     "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET"
